--- a/SpectrumAssignment/SpectrumAssignment/AppShell.xaml
+++ b/SpectrumAssignment/SpectrumAssignment/AppShell.xaml
@@ -3,9 +3,11 @@
     x:Class="SpectrumAssignment.AppShell"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:SpectrumAssignment.Views"
+    xmlns:customcontrols="clr-namespace:SpectrumAssignment.CustomControls"
+    xmlns:viewModels="clr-namespace:SpectrumAssignment.ViewModels"
     xmlns:views="clr-namespace:SpectrumAssignment.Views"
-    Title="SpectrumAssignment">
+    Title="SpectrumAssignment"
+    x:DataType="viewModels:AppShellViewModel">
 
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
@@ -15,55 +17,17 @@
 
     <Shell.Resources>
         <ResourceDictionary>
-
+            <Style x:Key="BaseStyle" TargetType="Element">
+                <Setter Property="Shell.TabBarIsVisible" Value="False" />
+                <Setter Property="Shell.BackgroundColor" Value="White" />
+                <Setter Property="Shell.ForegroundColor" Value="{x:StaticResource Primary}" />
+                <Setter Property="Shell.TitleColor" Value="{x:StaticResource DarkTextColor}" />
+                <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
+                <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
+            </Style>
             <Style BasedOn="{StaticResource BaseStyle}" TargetType="TabBar" />
             <Style BasedOn="{StaticResource BaseStyle}" TargetType="FlyoutItem" />
 
-            <Style Class="FlyoutItemLabelStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="White" />
-            </Style>
-            <Style
-                ApplyToDerivedTypes="True"
-                Class="FlyoutItemLayoutStyle"
-                TargetType="Layout">
-                <Setter Property="VisualStateManager.VisualStateGroups">
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="{x:OnPlatform UWP=Transparent, iOS=White}" />
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
-                                </VisualState.Setters>
-                            </VisualState>
-                            <VisualState x:Name="Selected">
-                                <VisualState.Setters>
-                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </Setter>
-            </Style>
-
-            <!--
-                Custom Style you can apply to any Flyout Item
-            -->
-            <Style
-                ApplyToDerivedTypes="True"
-                Class="MenuItemLayoutStyle"
-                TargetType="Layout">
-                <Setter Property="VisualStateManager.VisualStateGroups">
-                    <VisualStateGroupList>
-                        <VisualStateGroup x:Name="CommonStates">
-                            <VisualState x:Name="Normal">
-                                <VisualState.Setters>
-                                    <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
-                                </VisualState.Setters>
-                            </VisualState>
-                        </VisualStateGroup>
-                    </VisualStateGroupList>
-                </Setter>
-            </Style>
         </ResourceDictionary>
     </Shell.Resources>
 
@@ -115,10 +79,10 @@
         <ShellContent Title="Home" ContentTemplate="{DataTemplate views:HomePage}" />
     </FlyoutItem>
 
-    <!--<Shell.FlyoutFooter>
+    <Shell.FlyoutFooter>
         <StackLayout Padding="20">
-            <customcontrols:ButtonControlWithProgressBar Command="{Binding LogoutCommand}" IsInProgress="{Binding IsInProgress}" Text="Sign Out" />
+            <customcontrols:ButtonControlWithProgressBar Command="{Binding LogOutCommand}" Text="Sign Out" />
         </StackLayout>
-    </Shell.FlyoutFooter>-->
+    </Shell.FlyoutFooter>
 
 </Shell>
