--- a/SpectrumAssignment/SpectrumAssignment/Views/LoginPage.xaml
+++ b/SpectrumAssignment/SpectrumAssignment/Views/LoginPage.xaml
@@ -18,8 +18,8 @@
                         Grid.Row="0"
                         Aspect="Fill"
                         Data="m126.8675,108.63527l343,0l0,147.02589c-128.5,-58 -207.5,41.01956 -343,24.19026l0,-171.21615z"
-                        Fill="#04243c"
-                        Stroke="#04243c" />
+                        Fill="#049cdb"
+                        Stroke="#049cdb" />
                     <StackLayout Grid.Row="0">
                         <Label
                             Margin="0,10,0,0"
@@ -49,7 +49,7 @@
                                 <Label FontSize="14" TextColor="Black">
                                     <Label.FormattedText>
                                         <FormattedString>
-                                            <Span Text="Login Id" />
+                                            <Span Text="Email" />
                                             <Span Text=" *" TextColor="IndianRed" />
                                         </FormattedString>
                                     </Label.FormattedText>
@@ -65,7 +65,7 @@
                                         FontFamily="RobotoBold"
                                         FontSize="16"
                                         Keyboard="Text"
-                                        Placeholder="Login Id"
+                                        Placeholder="Email"
                                         PlaceholderColor="Black"
                                         Text="{Binding UserName.Value}"
                                         VerticalOptions="Center">
@@ -121,7 +121,7 @@
                                         IsPassword="True"
                                         Keyboard="Text"
                                         Placeholder="Password"
-                                        PlaceholderColor="{DynamicResource grayMedium}"
+                                        PlaceholderColor="{DynamicResource PrimaryDark}"
                                         Text="{Binding Password.Value}"
                                         VerticalOptions="Center">
                                         <renderers:BorderlessEntry.Behaviors>
@@ -144,7 +144,7 @@
                                 </Grid>
 
 
-                                <BoxView HeightRequest="1" Color="Black" />
+                                <BoxView HeightRequest="1" Color="{DynamicResource PrimaryDark}" />
 
                                 <Label
                                     x:Name="UserPasswordError"
@@ -167,9 +167,19 @@
                                 Margin="0,0,0,0"
                                 FontSize="12"
                                 HorizontalOptions="Center"
-                                Text="LoginTrouble ? GetHelp" />
+                                Text="LoginTrouble ? GetHelp"
+                                TextColor="{DynamicResource PrimaryDark}" />
                         </StackLayout>
+
                     </Grid>
+                    <StackLayout Grid.Row="2" BackgroundColor="{DynamicResource Primary}">
+                        <Label
+                            HorizontalTextAlignment="Center"
+                            Text="Dont'Have Account Login? SignUp"
+                            TextColor="White"
+                            VerticalOptions="FillAndExpand"
+                            VerticalTextAlignment="Center" />
+                    </StackLayout>
                 </Grid>
             </ScrollView>
         </AbsoluteLayout>
