--- a/SpectrumAssignment/SpectrumAssignment/Views/UserDetailPage.xaml
+++ b/SpectrumAssignment/SpectrumAssignment/Views/UserDetailPage.xaml
@@ -3,18 +3,51 @@
     x:Class="SpectrumAssignment.Views.UserDetailPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:Icons="clr-namespace:FontAwesome"
     xmlns:models="clr-namespace:SpectrumAssignment.Models"
     xmlns:viewModels="clr-namespace:SpectrumAssignment.ViewModels"
     Title="User info"
-    models:ViewModelLocator.AutoWireViewModel="True"
     x:DataType="viewModels:UserDetailPageViewModel"
     BackgroundColor="#eeeeee">
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                HorizontalOptions="CenterAndExpand"
-                Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" />
-        </StackLayout>
+        <AbsoluteLayout>
+            <StackLayout
+                AbsoluteLayout.LayoutBounds="0,0,1,1"
+                AbsoluteLayout.LayoutFlags="All"
+                Orientation="Vertical">
+
+                <StackLayout Margin="0,10,0,0">
+                    <Image Aspect="AspectFit" HeightRequest="100">
+                        <Image.Source>
+                            <FontImageSource
+                                FontFamily="{DynamicResource FontAwesomeIconRegular}"
+                                Glyph="{x:Static Icons:IconFonts.User}"
+                                Color="{DynamicResource PrimaryDark}" />
+                        </Image.Source>
+                    </Image>
+                    <Label
+                        FontAttributes="Bold"
+                        FontSize="25"
+                        HorizontalOptions="Center"
+                        Text="Vishal"
+                        TextColor="Black" />
+
+                </StackLayout>
+                <StackLayout Margin="25">
+                    <StackLayout>
+                        <Label
+                            FontAttributes="Bold"
+                            Text="User Name"
+                            TextColor="Black" />
+                        <Label
+                            Grid.Column="1"
+                            FontFamily="{StaticResource Roboto}"
+                            Text="Vishal"
+                            VerticalOptions="Center" />
+                        <BoxView HeightRequest="1" Color="Gray" />
+                    </StackLayout>
+                </StackLayout>
+            </StackLayout>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
