--- a/SpectrumAssignment/SpectrumAssignment/Views/HomePage.xaml
+++ b/SpectrumAssignment/SpectrumAssignment/Views/HomePage.xaml
@@ -104,54 +104,54 @@
                 </StackLayout>
 
             </StackLayout>
+            <CollectionView
+                ItemsSource="{Binding UserInfos}"
+                SelectedItem="{Binding SelectedItem}"
+                SelectionChangedCommand="{Binding ItemSelectedCommand}"
+                SelectionMode="Single">
 
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="models:UserInfo">
+                        <StackLayout>
+                            <Frame
+                                Margin="5"
+                                Padding="10"
+                                CornerRadius="10">
+                                <Grid ColumnDefinitions="45,*">
+                                    <Image
+                                        Grid.Column="0"
+                                        Aspect="AspectFit"
+                                        HorizontalOptions="Center"
+                                        VerticalOptions="Center"
+                                        WidthRequest="45">
+                                        <Image.Source>
+                                            <FontImageSource
+                                                FontFamily="{StaticResource FontAwesomeIconRegular}"
+                                                Glyph="{x:Static Icons:IconFonts.User}"
+                                                Size="25"
+                                                Color="{DynamicResource Primary}" />
+                                        </Image.Source>
+                                    </Image>
+                                    <StackLayout Grid.Column="1">
+                                        <Label Style="{x:StaticResource SubTitleBold}" Text="{Binding name}" />
+                                        <Label Text="{Binding email}" />
+                                    </StackLayout>
+                                </Grid>
+                            </Frame>
+                            <!--<StackLayout.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding .}" />
+                                </StackLayout.GestureRecognizers>-->
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
 
-            <RefreshView
+            <!--<RefreshView
                 Command="{Binding RefreshCommand}"
                 IsRefreshing="{Binding IsBusy}"
                 RefreshColor="{DynamicResource Primary}">
-                <CollectionView
-                    ItemsSource="{Binding UserInfos}"
-                    SelectedItem="{Binding SelectedItem}"
-                    SelectionChangedCommand="{Binding ItemSelectedCommand}"
-                    SelectionMode="Single">
 
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="models:UserInfo">
-                            <StackLayout>
-                                <Frame
-                                    Margin="5"
-                                    Padding="10"
-                                    CornerRadius="10">
-                                    <Grid ColumnDefinitions="45,*">
-                                        <Image
-                                            Grid.Column="0"
-                                            Aspect="AspectFit"
-                                            HorizontalOptions="Center"
-                                            VerticalOptions="Center"
-                                            WidthRequest="45">
-                                            <Image.Source>
-                                                <FontImageSource
-                                                    FontFamily="{StaticResource FontAwesomeIconRegular}"
-                                                    Glyph="{x:Static Icons:IconFonts.User}"
-                                                    Size="25"
-                                                    Color="{DynamicResource Primary}" />
-                                            </Image.Source>
-                                        </Image>
-                                        <StackLayout Grid.Column="1">
-                                            <Label Style="{x:StaticResource SubTitleBold}" Text="{Binding name}" />
-                                            <Label Text="{Binding email}" />
-                                        </StackLayout>
-                                    </Grid>
-                                </Frame>
-                                <!--<StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding .}" />
-                                </StackLayout.GestureRecognizers>-->
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-            </RefreshView>
+            </RefreshView>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
